Adicionado user.js
O primeiro arquivo de JavaScript (user.js) foi adicionado ao projeto

--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -3,6 +3,7 @@
 @main("Login") {
 	@message
 	
+	<script type="text/javascript" src='@routes.Assets.at("js/user.js")'></script>
 	
 	<form action="">
 		<div>User name</div>
