JQuery agora funcional
O Jquery está comprovadamente usado no projeto sem precisar fazer
modificações

--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -12,5 +12,5 @@
 		<input>
 		<button>Login</button>
 	</form>
-	<button id="print">Print out</button>
+	<button class="print">Print out</button>
 }
