--- a/test_1/app/views/register.scala.html
+++ b/test_1/app/views/register.scala.html
@@ -5,9 +5,20 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Register User</title>
+<link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))'>
 </head>
 <body>
-
+	<div class="container">
+		<form action="">
+			<div>Username</div>
+			<input type="text"/>
+			<div>Password</div>
+			<input type="password"/>
+			<div>Repeat password</div>
+			<input type="password"/>
+			<button class="btn btn-primary">Submit</button>
+		</form>
+	</div>
 </body>
 </html>
