Criado o primeiro Model e Database
Sucesso em salvar um objeto User na Database e em mostrar todos os
objetos salvos dentro da DB

--- a/test_1/app/views/register.scala.html
+++ b/test_1/app/views/register.scala.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 	<div class="container">
-		<form action="">
+		<form action="@routes.User.addUser()" method="post">
 			<div>Username</div>
-			<input type="text"/>
+			<input type="text" name="username"/>
 			<div>Password</div>
-			<input type="password"/>
+			<input type="password" name="password" />
 			<div>Repeat password</div>
-			<input type="password"/>
+			<input type="password" name="repeatPassword" />
 			<button class="btn btn-primary">Submit</button>
 		</form>
 	</div>
