--- a/test_1/app/views/index.scala.html
+++ b/test_1/app/views/index.scala.html
@@ -5,5 +5,8 @@
     <div class="well">
         <h1>@message</h1>
     </div>
+    
+    <a href="@routes.User.reg">Register</a>
+    <a href="@routes.User.index">Log In</a>
 
 }
