--- a/test_1/app/views/register.scala.html
+++ b/test_1/app/views/register.scala.html
@@ -19,6 +19,8 @@
 			<input type="password" name="repeatPassword" />
 			<button class="btn btn-primary">Submit</button>
 		</form>
+		
+		<a href=@routes.Application.index>Back</a>
 	</div>
 </body>
 </html>
