--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -13,4 +13,6 @@
 		<button>Login</button>
 	</form>
 	<button class="print">Print out</button>
+	<br/>
+	<a href=@routes.Application.index>Back</a>
 }
