Criado função de Logout

--- a/test_1/app/views/main.scala.html
+++ b/test_1/app/views/main.scala.html
@@ -18,6 +18,7 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <a id="titleLink" class="brand" href="/">@title</a>
+                <a href="/logOut">Sign out</a>
             </div>
         </div>
     </div>
