Campo de Comentário criado

--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -2,6 +2,16 @@
 
 @main(message) {
 	
+	<div id=comment></div>
 	
+	<h3>Post a comment</h3>
+	
+	<form>
+		<label for="comment" class=required>Your comment</label>
+		 <textarea rows="2"></textarea>
+		 <br/>
+		 <button class="btn btn-primary">Comment</button>
+		 
+	</form>
 	
 }
