Comentários salvos no BD
Agora os comentários estão sendo salvos no BD e pela URL /coments [e
possível visualiza-los (não usar na aplicação, apenas para saber se
existem)

--- a/test_1/app/views/main.scala.html
+++ b/test_1/app/views/main.scala.html
@@ -14,11 +14,17 @@
     </style>
 </head>
 <body>
+<!-- <script type="text/javascript">
+$("document").ready(function() {    	
+	var sign = document.cookie;
+	console.log(sign);
+})
+</script> -->
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
                 <a id="titleLink" class="brand" href="/">@title</a>
-                <a href="/logOut">Sign out</a>
+                <a class="logOut" href="/logOut">Sign out</a>
             </div>
         </div>
     </div>
