Link para a página de usuário criado

--- a/test_1/app/views/index.scala.html
+++ b/test_1/app/views/index.scala.html
@@ -8,5 +8,9 @@
     
     <a href="@routes.User.reg">Register</a>
     <a href="@routes.User.index">Log In</a>
+    
+    <div class=userpage>
+    	<a href="@routes.Application.relay">My Userpage</a>
+    </div>
 
 }
