Criados links condicionais
Agora a página principal tem um link para o perfil do usuário, e tanto
este link e o link de logoff aparecem somente quando o usuário está
logado

--- a/test_1/app/views/index.scala.html
+++ b/test_1/app/views/index.scala.html
@@ -8,7 +8,17 @@
     
     <a href="@routes.User.reg">Register</a>
     <a href="@routes.User.index">Log In</a>
-    
+    <script type="text/javascript">
+		$(document).ready(function(){
+			
+			$(".userpage").css("display","none");
+			if(!@session.isEmpty()){
+				$(".userpage").css("display","block");
+			}
+		})
+			
+		
+	</script>
     <div class=userpage>
     	<a href="@routes.Application.relay">My Userpage</a>
     </div>
