Comentários listados na página do usuário
Agora os comentários aparecem junto com o autor na página do usuário

--- a/test_1/app/views/index.scala.html
+++ b/test_1/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Welcome to Play Framework, Caio") {
+@main("Welcome to the Book Social Network") {
 
     <div class="well">
         <h1>@message</h1>
