Criada página de usuáriop
Através dessa página, um membros pode acessar o perfil de outros membros
e o seu próprio

--- a/test_1/app/views/main.scala.html
+++ b/test_1/app/views/main.scala.html
@@ -36,6 +36,9 @@
                 <li>
                 	<a href="/userpage">Userpage</a>
                 </li>
+                <li>
+                	<a href=/usersList>Other users</a>
+                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
