Mudanças na Aplicação
Retirado o botâo de Reply, colocado título nas páginas de Usuário

--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -1,7 +1,9 @@
-@(message: String)
+@(message: String, user:UserModel)
 
 @main(message) {
 	<script type="text/javascript" src='@routes.Assets.at("js/user.js")'></script>	
+	
+	<h1>@user.username  Userpage</h1>
 	
 	<div id=comments>
 		<ul class=commentsList></ul>
