Criado link para a página de Registrar Livros
Link na barra lateral criado

--- a/test_1/app/views/main.scala.html
+++ b/test_1/app/views/main.scala.html
@@ -48,6 +48,9 @@
                 <li>
                 	<a class="showLogged" href=/usersList >Other users</a>
                 </li>
+                <li>
+                	<a href="/addBook">Add a Book</a>
+                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
