Link para listagem de livros
O link foi adicionado à barra lateral

--- a/test_1/app/views/main.scala.html
+++ b/test_1/app/views/main.scala.html
@@ -51,6 +51,9 @@
                 <li>
                 	<a href="/addBook">Add a Book</a>
                 </li>
+                <li>
+                	<a href="/booksList">Book Listing</a>
+                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
