--- a/test_1/app/views/bookListing.scala.html
+++ b/test_1/app/views/bookListing.scala.html
@@ -3,7 +3,7 @@
 @main("Welcome to the Book Social Network") {
 
 	<h1>List of registered books</h1>
-	<script type="text/javascript" src='@routes.Assets.at("js/userList.js")'></script>
+	<script type="text/javascript" src='@routes.Assets.at("js/bookList.js")'></script>
 	
 	<ul class="listing"></ul>
 
