Corrigido erro e bug nos comentarios do usuario

--- a/test_1/app/views/book.scala.html
+++ b/test_1/app/views/book.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
 @main("Book Page") {
-	<script type="text/javascript" src='@routes.Assets.at("js/user.js")'></script>	
+	<script type="text/javascript" src='@routes.Assets.at("js/book.js")'></script>	
 	
 	<h1>@message</h1>
 	
