--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -11,7 +11,11 @@
 	
 	<h3>Post a comment</h3>
 	
-	<form action="@routes.Application.postComment()" method="post">
+	<script type="text/javascript">r
+		console.log(@user.id)
+	</script>
+	
+	<form action="@routes.UserComment.postUserComment(user.id.toInt)" method="post">
 		<label for="comment" class=required>Your comment</label>
 		<br/>
 		<textarea rows="2" name="content"></textarea>
