Mudanças na página main

--- a/test_1/app/views/main.scala.html
+++ b/test_1/app/views/main.scala.html
@@ -26,12 +26,9 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
+                    <a href="/">
                         Projeto TCC
                     </a>
-                </li>
-                <li>
-                    <a id="titleLink" class="brand" href="/">@title</a>
                 </li>
                 <li>
                 	<a class="logOut showLogged" href="/logOut">Sign out</a>
