Adicionado link de Following
Só o link mesmo

--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -20,6 +20,7 @@
 		<button class="btn btn-primary">Comment</button>
 	</form>
 	<a href="@routes.Application.index()">Back</a><br/>
-	<a href="@routes.Application.tradeHistory()">My trade history</a>
+	<a href="@routes.Application.tradeHistory()">My trade history</a><br/>
+	<a href="@routes.Application.tradeHistory()">Following</a>
 	
 }
