--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -3,7 +3,8 @@
 @main(message) {
 	<script type="text/javascript" src='@routes.Assets.at("js/user.js")'></script>	
 	
-	<h1>@user.username  Userpage</h1>
+	<h1>@user.username  Userpage</h1>	
+	<button class="btn btn-primary" id="followBtn">Follow</button>
 	
 	<div id=comments>
 		<ul class=commentsList></ul>
@@ -21,6 +22,6 @@
 	</form>
 	<a href="@routes.Application.index()">Back</a><br/>
 	<a href="@routes.Application.tradeHistory()">My trade history</a><br/>
-	<a href="@routes.Application.tradeHistory()">Following</a>
+	<a href="@routes.User.followingList()">Following</a>
 	
 }
