Adicionado TradeRecord controller e outras mudanças

--- a/test_1/app/views/tradeHistory.scala.html
+++ b/test_1/app/views/tradeHistory.scala.html
@@ -5,6 +5,21 @@
     <div class="well">
         <h1>Trade History</h1>
     </div>
-    
+    <script type="text/javascript">
+		
+	</script>
+	<form>
+		<label>Borrower</label>
+		<input type="text" name="receiver"/><br/>
+		<label>Book Sent</label>
+		<input type="text" name="bookSent"/><br/>
+		<label>Book Borrowed</label>
+		<input type="text" name="bookReceived"/><br/>
+		<label>Date</label>
+		<input type="date" name="timeOfTrade"/><br/>
+		<button type="button" id="register">Register New Trade</button>
+	</form>
+	
+	<hr>
 
 }
