--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -32,7 +32,7 @@
 		<button class="btn btn-primary">Comment</button>
 	</form>
 	<a href="@routes.Application.tradeHistory()">My trade history</a><br/>
-	<a href="@routes.User.followingList(user.id)">Following</a>
+	<a href="@routes.User.followingList(user.id)">Following</a><br/>
 	<a href="@routes.Application.index()">Back</a><br/>
 	
 	
