--- a/test_1/app/views/user.scala.html
+++ b/test_1/app/views/user.scala.html
@@ -33,6 +33,7 @@
 	</form>
 	<a href="@routes.Application.tradeHistory()">My trade history</a><br/>
 	<a href="@routes.User.followingList(user.id)">Following</a><br/>
+	<a href="@routes.User.bookListing(user.id)">My books</a><br/>
 	<a href="@routes.Application.index()">Back</a><br/>
 	
 	
