Adicionado autor ao BookModel

--- a/test_1/app/views/registerBook.scala.html
+++ b/test_1/app/views/registerBook.scala.html
@@ -1,9 +1,6 @@
 
 
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
+@main("Book Page") {
 <title>Add a new book.</title>
 <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))'>
 </head>
@@ -14,11 +11,13 @@
 		<form action="@routes.Book.addBook()" method="post">
 			<div>Title</div>
 			<input type="text" name="title"/>
+			<div>Author</div>
+			<input type="text" name="author"/>
 			<div>ISBN</div>
-			<input type="text" name="ISBN"/>
+			<input type="text" name="ISBN"/><br/>
 			<button class="btn btn-primary">Submit</button>
 		</form>
 		<a href=@routes.Application.index>Back</a>
 	</div>
 </body>
-</html>
+}
