--- a/test_1/app/views/book.scala.html
+++ b/test_1/app/views/book.scala.html
@@ -4,6 +4,7 @@
 	<script type="text/javascript" src='@routes.Assets.at("js/book.js")'></script>	
 	
 	<h1>@message</h1>
+	<h5>@book.author</h5>
 	<form action="@routes.User.addBook(book.id)" method="post">
 		<button class="btn btn-primary" id="followBtn">Add</button>
 	</form>	
