--- a/test_1/app/views/main.scala.html
+++ b/test_1/app/views/main.scala.html
@@ -27,23 +27,23 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="/">
-                        Projeto TCC
+                      BookTradeNet
                     </a>
                 </li>
                 <li>
                 	<a class="logOut showLogged" href="/logOut">Sign out</a>
                 </li>
 				<li>
-					<a href="/register">Register</a>
+					<a href="/register">Register User</a>
                 </li>
                 <li>
                 	<a href="/signIn">Log In</a>
                 </li>
                 <li>
-                	<a class="showLogged" href="/userpage">Userpage</a>
+                	<a class="showLogged" href="/userpage">My Profile</a>
                 </li>
                 <li>
-                	<a class="showLogged" href=/usersList >Other users</a>
+                	<a class="showLogged" href=/usersList >User Listing</a>
                 </li>
                 <li>
                 	<a href="/addBook">Add a Book</a>
