--- a/test_1/app/views/userListing.scala.html
+++ b/test_1/app/views/userListing.scala.html
@@ -2,7 +2,7 @@
 
 @main("Welcome to the Book Social Network") {
 
-	<h1>These are the user of our site</h1>
+	<h1>User Listing</h1>
 	<script type="text/javascript" src='@routes.Assets.at("js/userList.js")'></script>
 	
 	<ul class="listing"></ul>
